--- a/layout.css
+++ b/layout.css
@@ -25,7 +25,7 @@ html {
     background: var(--background-primary);
     position: sticky;
     top: 0;
-    height: 117px;
+    min-height: 117px;
     display: flex;
     align-items: center;
     border-bottom: 1px solid #151c25;
@@ -48,5 +48,21 @@ html {
 .main-screen .safe-frame {
     background: #455840;
     min-height: 6200px;
+}
+
+.portfolio {
+    width: 100%;
+    outline: 1px solid green;
+    min-height: 2200px;
+}
+
+.footer {
+    background: var(--background-primary);
+    /* position: sticky;
+    bottom: 0; */
+    min-height: 117px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #151c25;
 }
  
