--- a/layout.css
+++ b/layout.css
@@ -104,25 +104,28 @@ html {
 .portfolio-screen {
     width: 100%;
     background: #b40fca;
-    min-height: 2000px;
+    min-height: 2080px;
 }
 
 .order-screen .safe-frame {
     background: cadetblue;
-    min-height: 515px;
+    min-height: 410px;
 }
 
 .footer {
     background: var(--background-primary);
-    /* display: flex;
-    align-items: center; */
-    border-top: var(--border-primary);
 }
 
 .footer .safe-frame {
+    align-items: center;
+    min-height: 210px;
+}
+
+.company-menu-container {
+    outline: var(--outline-draft);
     width: 100%;
-    /* justify-content: space-between;
-    align-items: center; */
-    min-height: 184px;
+    min-height: 60px;
+    /* display: flex; */
+    /* justify-content: space-between; */
 }
  
