--- a/layout.css
+++ b/layout.css
@@ -48,6 +48,9 @@ html {
     width: 100%;
     min-height: 60px;
     display: flex;
+}
+
+.header .company-info-container {
     justify-content: space-between;
 }
 
@@ -59,14 +62,20 @@ html {
 
 .company-info {
     outline: var(--outline-draft);
-    min-width: 450px;
     display: flex;
+}
+
+.header .company-info {
+    min-width: 450px;
     justify-content: space-between;
 }
 
 .company-info-item {
     outline: var(--outline-draft);
     background: var(--background-draft);
+}
+
+.header .company-info-item {
     min-width: 215px;
 }
 
@@ -119,10 +128,19 @@ html {
 .footer .safe-frame {
     align-items: center;
     min-height: 210px;
-    justify-content: center;
 }
 
 .footer .company-info-container {
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer .company-info-item {
+    margin-left: 40px;
+}
+
+.footer .company-info-item:first-child {
+    margin-left: 0;
 }
  
