--- a/layout.css
+++ b/layout.css
@@ -112,8 +112,18 @@ html {
 .catalog {
     width: 100%;
     height: 1735px;
-    outline: var(--outline-draft);
+    /* outline: var(--outline-draft); */
     margin-top: 85px;
+    display: grid;
+    grid-template-columns: repeat(3, 380px);
+    row-gap: 70px;
+    column-gap: 20px;
+}
+
+.card {
+    height: 531px;
+    outline: var(--outline-draft);
+    border-radius: 10px;
 }
 
 .loading-screen .safe-frame {
