--- a/layout.css
+++ b/layout.css
@@ -99,6 +99,7 @@ html {
     max-width: 226px;
     height: 37px;
     border-radius: 5px;
+    background: var(--background-draft);
     outline: var(--outline-draft);
     padding: 10px 22px;
     box-sizing: border-box;
@@ -116,6 +117,11 @@ html {
     background: var(--background-draft);
     width: 1035px;
     height: 45px;
+    /* margin-left: auto;
+    margin-right: auto; */
+}
+
+.catalog-screen .screen-title {
     margin-left: auto;
     margin-right: auto;
 }
@@ -128,6 +134,11 @@ html {
     grid-template-rows: repeat(3, 531px);
     row-gap: 70px;
     column-gap: 20px;
+}
+
+.catalog-screen .screen-title {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .catalog-card {
@@ -164,6 +175,8 @@ html {
 
 .feedback-screen .screen-title {
     margin-bottom: 85px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .carousel {
@@ -205,6 +218,11 @@ html {
     column-gap: 10px;
 }
 
+.portfolio-screen .screen-title {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .screen-paragraph {
     outline: var(--outline-draft);
     background: var(--background-draft);
@@ -223,6 +241,11 @@ html {
     background: cadetblue;
     min-height: 395px;
     padding-top: 70px;
+}
+
+.order-screen .screen-title {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer {
