--- a/layout.css
+++ b/layout.css
@@ -110,8 +110,27 @@ html {
     min-height: 45px;
     outline: var(--outline-draft);
     background: var(--background-draft);
-    /* margin-left: auto;
-    margin-right: auto; */
+}
+
+.screen-paragraph {
+    max-width: 1035px;
+    min-height: 35px;
+    outline: var(--outline-draft);
+    background: var(--background-draft);
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 23px;
+}
+
+.btn {
+    max-width: 277px;
+    min-height: 86px;
+    outline: var(--outline-draft);
+    background: var(--background-draft);
+    border-radius: 7px;
+    margin-top: 70px;
+    font-size: 23px;
 }
 
 .screen-content .screen-title {
@@ -230,7 +249,7 @@ html {
     margin-right: auto;
 }
 
-.screen-paragraph {
+/* .screen-paragraph {
     outline: var(--outline-draft);
     background: var(--background-draft);
     width: 1035px;
@@ -238,7 +257,7 @@ html {
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
 .portfolio-card {
     outline: var(--outline-draft);
