--- a/layout.css
+++ b/layout.css
@@ -93,6 +93,10 @@ html {
     outline: var(--outline-draft);
 }
 
+.screen-content .screen-paragraph {
+    margin-top: 34px;
+}
+
 .note {
     display: inline-block;
     min-width: 132px;
@@ -117,20 +121,24 @@ html {
     min-height: 35px;
     outline: var(--outline-draft);
     background: var(--background-draft);
-    margin-top: 15px;
-    margin-left: auto;
-    margin-right: auto;
     font-size: 23px;
 }
 
 .btn {
-    max-width: 277px;
-    min-height: 86px;
+    min-width: 277px;
+    width: fit-content;
+    min-height: 88px;
     outline: var(--outline-draft);
     background: var(--background-draft);
-    border-radius: 7px;
-    margin-top: 70px;
-    font-size: 23px;
+    border-radius: 10px;
+    margin-top: 51px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding-left: 51px;
+    padding-right: 51px;
 }
 
 .screen-content .screen-title {
@@ -249,15 +257,11 @@ html {
     margin-right: auto;
 }
 
-/* .screen-paragraph {
-    outline: var(--outline-draft);
-    background: var(--background-draft);
-    width: 1035px;
-    height: 35px;
+.portfolio-screen .screen-paragraph {
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
-} */
+}
 
 .portfolio-card {
     outline: var(--outline-draft);
@@ -270,6 +274,12 @@ html {
 }
 
 .order-screen .screen-title {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.order-screen .screen-paragraph {
+    margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
 }
