--- a/layout.css
+++ b/layout.css
@@ -139,7 +139,7 @@ html {
 }
 
 .btn {
-    min-width: 277px;
+    /* min-width: 277px; */
     width: fit-content;
     min-height: 88px;
     outline: var(--outline-draft);
@@ -150,8 +150,8 @@ html {
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    padding-left: 51px;
-    padding-right: 51px;
+    padding-left: 52px;
+    padding-right: 52px;
 }
 
 .screen-content .btn {
@@ -197,6 +197,42 @@ html {
 .catalog-card {
     outline: var(--outline-draft);
     border-radius: 10px;
+}
+
+.image-container {
+    width: 100%;
+    height: 245px;
+    margin-bottom: 50px;
+}
+
+.catalog-card-content {
+    box-sizing: border-box;
+    padding-left: 45px;
+    width: 290px;
+}
+
+.catalog-card-title {
+    font-size: 26px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+.catalog-card-paragraph {
+    font-size: 18px;
+    margin-bottom: 28px;
+}
+
+.catalog-card-price {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 23px;
+}
+
+.catalog .btn {
+    padding-left: 40px;
+    padding-right: 40px;
+    min-height: 65px;
+    border-radius: 5px;
 }
 
 .loading-screen .safe-frame {
