--- a/layout.css
+++ b/layout.css
@@ -344,7 +344,10 @@ html {
 .carousel-item-person-container {
     outline: var(--outline-draft);
     width: 380px;
-    height: 470px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .carousel-item-person-avatar-container {
@@ -356,7 +359,13 @@ html {
 }
 
 .carousel-item-person-avatar-name {
-    margin-top: 35px;
+    margin-top: 27px;
+    font-size: 24px;
+}
+
+.carousel-item-person-avatar-location {
+    margin-top: 10px;
+    font-size: 18px;
 }
 
 .slider {
